--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,7 @@
 
   #mod {
-
     width: 100%;
-    height: 100%;
+    height: 90%;
   }
 
   #logo {
@@ -13,15 +12,37 @@
     position: absolute;
   }
 
-  #button {
+  #social-media {
 
     position: absolute; 
-    left: 0; 
-    right: 0; 
-    bottom: 20px;
+    right: 50px;
+    top: 30px;
     margin-left: auto; 
     margin-right: auto; 
-
-    width: 100px; /* Need a specific value to work */;
-    z-index: 999;
   }
+
+
+  #catalog {
+
+    position: absolute; 
+    bottom: 5px;
+    z-index: 9999;
+    width: 95%;
+    height: 10%;
+  }
+
+
+
+  #mats{
+    position: absolute; 
+    left: 90px;
+  }
+
+.btn {
+  background-color:transparent; /* Blue background */
+  border: none; /* Remove borders */
+  padding: 12px 12px; /* Some padding */
+  font-size: 30px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
+}
+
